[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Characters/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Characters/Players/Armatures/Armature-M.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Camera.gd" type="Script" id=4]
[ext_resource path="res://SFX/harp-glissando-up.wav" type="AudioStream" id=5]

[node name="Player" index="0" instance=ExtResource( 1 )]

collision_layer = 2
collision_mask = 13
script = ExtResource( 2 )
_sections_unfolded = [ "Collision" ]
max_ammo = 5

[node name="MeshInstance" parent="." index="0"]

visible = false

[node name="Armature" parent="." index="2" instance=ExtResource( 3 )]

transform = Transform( 0.25, 0, 0, 0, -1.09278e-008, -0.25, 0, 0.25, -1.09278e-008, 0, 0, 0 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="AnimationTreePlayer" parent="Armature" index="2"]

data = {
"active": true,
"connections": [ "Action", "out", 0, "IdleAnim", "Move", 0, "RunAnim", "Move", 1, "ThrowAnim", "Action", 0, "Move", "Action", 1, "ReloadAnim", "Action", 2 ],
"master": NodePath("../AnimationPlayer"),
"nodes": [ {
"id": "out",
"position": Vector2( 893, 144 ),
"type": "output"
}, {
"blend": 0.0,
"filter": [  ],
"id": "Move",
"position": Vector2( 307, 166 ),
"type": "blend2"
}, {
"filter": [  ],
"from": "Run",
"id": "RunAnim",
"position": Vector2( 43, 255 ),
"type": "animation"
}, {
"blend": -0.08,
"id": "Action",
"position": Vector2( 685, 135 ),
"type": "blend3"
}, {
"filter": [  ],
"from": "Punch",
"id": "ThrowAnim",
"position": Vector2( 384, 5 ),
"type": "animation"
}, {
"filter": [  ],
"from": "Working",
"id": "ReloadAnim",
"position": Vector2( 434, 318 ),
"type": "animation"
}, {
"filter": [  ],
"from": "Idle",
"id": "IdleAnim",
"position": Vector2( 52, 85 ),
"type": "animation"
} ]
}

[node name="Camera" type="Camera" parent="." index="3"]

transform = Transform( -1, 0, -8.74228e-008, 0, 1, 0, 8.74228e-008, 0, -1, 0, 2.66139, -5 )
keep_aspect = 1
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 2
projection = 0
current = true
fov = 70.0
size = 1.0
near = 0.05
far = 100.0
script = ExtResource( 4 )
mouse_sensitivity = 1200

[node name="RefillTimer" type="Timer" parent="." index="6"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="Harp" type="AudioStreamPlayer" parent="." index="7"]

stream = ExtResource( 5 )
volume_db = -10.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="timeout" from="RefillTimer" to="." method="_on_RefillTimer_timeout"]


[editable path="Armature"]
